[project]
name = "clear-skies"
description = "A framework for building backends in the cloud"
license = "MIT"
version = "1.22.10"
dynamic = ["classifiers"]
readme = "./README.md"
authors = [{name = "Conor Mancone", email = "cmancone@gmail.com"}]
requires-python = '>=3.11,<4.0'
dependencies = ['dateparser (>=1.1.8,<2.0.0)', 'requests (>=2.31.0,<3.0.0)', 'typing-extensions (>=4.12.0,<5.0.0) ; python_version >= "3.10" and python_version < "3.11"', 'wrapt (>=1.16.0,<2.0.0)']

[project.urls]
repository = "https://github.com/cmancone/clearskies"

[project.optional-dependencies]
secrets = ['akeyless (>=4.0.0,<5.0.0)', 'akeyless-cloud-id (>=0.2.3,<0.3.0)']
mysql = ['pymysql (>=1.1.0,<2.0.0)']
jwcrypto = ['jwcrypto (>=1.5.6,<2.0.0)']

[tool.poetry]
packages = [
    { include = "clearskies", from = "src" }
]
exclude = [
    "src/clearskies/*_test.py",
    "src/clearskies/**/*_test.py",
    "src/clearskies/integration_tests/*"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
requires-poetry = '>=2.0,<3.0'

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.13.0"
pre-commit = "^3.2.2"
pytest = "^8.3.1"
ruff = "^0.12.0"
types-dateparser = "^1.2.0.20250601"
types-jwcrypto = "^1.5.0.20250516"
types-pymysql = "^1.1.0.20250516"
types-requests = "^2.32.4.20250611"

[tool.pytest]
addopts = "--ignore=src/clearskies/contexts/test.py --cache-clear"

[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
# The following is Black's default, but it's good to be explicit
# to match your Ruff config.
skip-magic-trailing-comma = false
preview = true

[tool.mypy]
python_version = "3.11"

exclude = [
 ".*_test\\.py$"
]

