

[tool.poetry]
name = "clear-skies"
version = "1.22.31"
description = "A framework for building backends in the cloud"
authors = [
    "Conor Mancone <cmancone@gmail.com>",
]
repository = "https://github.com/cmancone/clearskies"
license = "MIT"
readme = "./README.md"
packages = [
    { include = "clearskies", from = "src" }
]
exclude = [
    "src/clearskies/*_test.py",
    "src/clearskies/**/*_test.py",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]

[tool.poetry.dependencies]
python = "^3.10"
akeyless = {version = "^5.0.4", optional = true}
akeyless-cloud-id = {version = "^0.3.0", optional = true}
dateparser = "^1.2.2"
jose = {version = "^1.0.0", optional = true}
jwcrypto = {version = "^1.5.6", optional = true}
pymysql = {version = "^1.1.1", optional = true}
requests = "^2.32.4"
typing-extensions = {version = "^4.14.0", python = ">=3.10,<3.11"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pre-commit = "^3.8.0"
pytest = "^8.4.1"

[tool.poetry.extras]
secrets = ["akeyless", "akeyless-cloud-id"]
mysql = ["pymysql"]
jose = ["jose"]
jwcrypto = ["jwcrypto"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
